# math-rodriguesRotationFormula

./: CMakeLists.txt  README.md  igme_config.yml  setup
Rodrigues' Rotation Formula/Debug/: Rodrigues' Rotation Formula.ilk
Rodrigues' Rotation Formula/Rodrigues' Rotation Formula/: Rodrigues' Rotation Formula.vcxproj
Rodrigues' Rotation Formula/Rodrigues' Rotation Formula/Debug/: vc120.idb
Rodrigues' Rotation Formula/Rodrigues' Rotation Formula/Debug/Rodrigue.BE2B863A.tlog/: CL.read.1.tlog  CL.write.1.tlog  Rodrigues' Rotation Formula.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
source/: main.cpp
